clicks issue fixed, empty screen display issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -27,6 +27,8 @@ body::-webkit-scrollbar {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  min-height: inherit;
+    max-height: inherit;
 }
 
 .searchAssist-kore-chat-window .panel {
