FLY-3759,FLY-3780,FLY-3781, FLY-3785, FLY-3772, FLY-3805 issues fixed

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -577,7 +577,7 @@
                                             <input type="text" maxlength="60" placeholder="Search For Field"
                                                 id="facets-search-input"
                                                 class="input-search dropdown-toggle dropdown-input"
-                                                data-toggle="dropdown" [(ngModel)]="currentFacetObj.fieldName"
+                                                data-toggle="dropdown" [(ngModel)]="tab_configure_filed_name"
                                                 autocomplete="off" disabled>
                                         </div>
                                     </div>
