Facet - Descending Fix

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -404,7 +404,7 @@
                                                                 <li (click)="currentFacetObj.sortConfig.order='asc'">
                                                                     <a>{{'facets.ascending'| translate}}</a>
                                                                 </li>
-                                                                <li (click)="currentFacetObj.sortConfig.order='des'">
+                                                                <li (click)="currentFacetObj.sortConfig.order='desc'">
                                                                     <a>{{'facets.descending'|translate}}</a>
                                                                 </li>
                                                             </perfect-scrollbar>
