--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -212,8 +212,8 @@
           </div> -->
 
 
-          <div class="condition-block" *ngIf="selectedStage.type !== 'custom_script'">
-            <div class="group-radiobutton">
+          <div class="condition-block" > <!-- *ngIf="selectedStage.type !== 'custom_script'" -->
+            <div class="group-radiobutton"> 
               <div class="heading-title">Condition</div>
               <div class="desc-text"></div>
               <div class="kr-sg-radiobutton">
