--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -674,23 +674,42 @@
                     }
                 }
             }
-            .tabfacet-info{
+           .tab-facet-info-content{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
                 background: #EFF0F1;
-                padding: 20px;
-                span{
-                    font-weight: normal;
-                    font-size: 12px;
-                    line-height: 18px;
+                padding: 11px 20px;
+                margin-bottom: 18px;
+                .content-data{
                     display: flex;
                     align-items: center;
+                    .warning-icon{
+                        width: 28px;
+                        height: 28px;
+                        background: #F8F9FA;
+                        flex-shrink: 0;
+                        border-radius: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-right: 12px;
+                    }
+                    .text-content{
+                        font-weight: normal;
+                        font-size: 12px;
+                        line-height: 18px;
+                        color: #000000;
+                    }
                 }
-                p{
-                    position: absolute;
-                    right: 0;
-                    margin-right: 20px;
+                .ok-btn{
+                    font-weight: normal;
+                    font-size: 14px;
+                    line-height: 20px;
                     color: #0D6EFD;
+                    cursor: pointer;
                 }
-            }
+           }
         }
         .search_block {
             border-bottom: 1px solid #f5f5f5;
