--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -17416,6 +17416,7 @@ a.tile-heading{
 }
 .show-more-list {
     display: block;
+    width: 100%;
     align-items: end;
     cursor: pointer;
     font-weight: 500;
