--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -77,7 +77,7 @@
             </div>
             <div class="queries">
               <div class="queries-title">{{"plan.queries"| translate}}</div>
-              <div class="queries-count"><span class="">{{(usageDetails.searchQueries?.used)| valueFormat}}</span> /
+              <div class="queries-count" *ngIf="usageDetails && usageDetails.searchQueries && usageDetails.searchQueries.used"><span class="">{{(usageDetails.searchQueries?.used)| valueFormat}}</span> /
                 {{(usageDetails.searchQueries?.limit)|valueFormat}}</div>
             </div>
             <!-- <div class="bg_queries"></div> -->
@@ -86,7 +86,7 @@
             </ngb-progressbar>
             <div class="queries">
               <div class="queries-title">{{"plan.documents"| translate}}</div>
-              <div class="queries-count"><span class="">{{usageDetails.ingestDocs?.used | valueFormat}}</span> /
+              <div class="queries-count" *ngIf="usageDetails && usageDetails.ingestDocs && usageDetails.ingestDocs.used"><span class="">{{usageDetails.ingestDocs?.used | valueFormat}}</span> /
                 {{(usageDetails.ingestDocs?.limit)| valueFormat}}</div>
             </div>
             <!-- <div class="bg_queries"></div> -->
