FLY-3783 Advance Result Template: If the configured field doesn't matches with the selected value then user should not see empty layouts in SDK issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -17436,3 +17436,9 @@ display: block;
 .default-data-show-not-loaded .default-add, .default-data-show-not-loaded .store-updates-block{
     display: none;
 }
+.no-data-mapped{
+    content: url(../images/data-not-match.png); 
+}
+.no-templates-defined-full-results-container{
+    display: none;
+}
