--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -27,8 +27,6 @@ body::-webkit-scrollbar {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  min-height: inherit;
-    max-height: inherit;
 }
 
 .searchAssist-kore-chat-window .panel {
@@ -1235,6 +1233,7 @@ body.showFullResults.top-down .top-down-wrapper{
   line-height: 20px;
   max-width: 75%;
   padding-right: 5px;
+  min-width: 41px;
 }
 .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .tab-sec .tab-name .tab-count {
   max-width: 35px;
@@ -2918,3 +2917,7 @@ display: none !important;
     padding: 5px;
     width: 33% !important;
   }
+  .sdk-top-down-interface .purejscarousel-slide{
+    padding: 6px;
+    width: 280px !important;
+}
